# Evolution-of-Todo-App-Hackathon

./: GEMINI.md
Phase-I-Todo-In-Memory-Python-Console-App/cli-todo-application/: .gitignore  README.md  pyproject.toml
Phase-II-Todo-Full-Stack-Web-Application/todo-web-app/: README.md
Phase-III-AI-Powered-Todo-App/: .dockerignore  .gitignore  GEMINI.md  README.md  temp_log.txt
Phase-III-AI-Powered-Todo-App/ai-agent/: Dockerfile  pyproject.toml
Phase-III-AI-Powered-Todo-App/ai-agent/src/agents/: main_agent.py  tool_handler.py
Phase-III-AI-Powered-Todo-App/ai-agent/src/config/: logging.py
Phase-III-AI-Powered-Todo-App/ai-agent/tests/: test_agent_interactions.py
Phase-III-AI-Powered-Todo-App/ai-powered-todo-app/: .gitignore
Phase-III-AI-Powered-Todo-App/backend/: Dockerfile  README.md  pyproject.toml  ruff.toml
Phase-III-AI-Powered-Todo-App/backend/alembic/: env.py
Phase-III-AI-Powered-Todo-App/backend/alembic/versions/: 8730e2bda261_initial_schema_setup.py
Phase-III-AI-Powered-Todo-App/backend/src/: main.py  mcp_server.py
Phase-III-AI-Powered-Todo-App/backend/src/api/: auth.py  dependencies.py  errors.py
Phase-III-AI-Powered-Todo-App/backend/src/api/endpoints/: chat.py  todo.py
Phase-III-AI-Powered-Todo-App/backend/src/config/: logging.py
Phase-III-AI-Powered-Todo-App/backend/src/mcp_tools/: todo.py
Phase-III-AI-Powered-Todo-App/backend/src/models/: conversation.py  todo.py  user.py
Phase-III-AI-Powered-Todo-App/backend/src/services/: conversation_service.py  database.py  todo_service.py
Phase-III-AI-Powered-Todo-App/backend/tests/integration/: test_api_endpoints.py
Phase-III-AI-Powered-Todo-App/backend/tests/unit/: test_todo_service.py
Phase-III-AI-Powered-Todo-App/frontend/: .eslintrc.json
Phase-III-AI-Powered-Todo-App/todo-ai-chatbot/: GEMINI.md  README.md  debug_sqlmodel_version.txt  explanation_for_user.txt
Phase-III-AI-Powered-Todo-App/todo-ai-chatbot/backend/: alembic.ini  pyproject.toml  todo_app.db
Phase-III-AI-Powered-Todo-App/todo-ai-chatbot/backend/alembic/: env.py
Phase-III-AI-Powered-Todo-App/todo-ai-chatbot/backend/alembic/versions/: 0db56e4074e1_add_email_column_to_user_table.py  255dc956a8c9_make_timestamps_and_role_content_non_.py  b4cb6b19f012_add_user_model_and_relationships.py
Phase-III-AI-Powered-Todo-App/todo-ai-chatbot/backend/src/: auth.py  main.py
Phase-III-AI-Powered-Todo-App/todo-ai-chatbot/backend/src/agent/: agent_logic.py  init.py
Phase-III-AI-Powered-Todo-App/todo-ai-chatbot/backend/src/api/: auth_routes.py  chat.py  tasks.py
Phase-III-AI-Powered-Todo-App/todo-ai-chatbot/backend/src/config/: database.py  logging.py
Phase-III-AI-Powered-Todo-App/todo-ai-chatbot/backend/src/mcp_tools/: add_task.py  complete_task.py  delete_task.py  list_tasks.py  update_task.py  utils.py
Phase-III-AI-Powered-Todo-App/todo-ai-chatbot/backend/src/middleware/: error_handler.py
Phase-III-AI-Powered-Todo-App/todo-ai-chatbot/backend/src/models/: conversation.py  message.py  task.py  user.py
Phase-III-AI-Powered-Todo-App/todo-ai-chatbot/backend/tests/integration/: test_api_endpoints.py  test_auth_routes.py
Phase-III-AI-Powered-Todo-App/todo-ai-chatbot/backend/tests/unit/mcp_tools/: test_mcp_tools.py
Phase-IV-Local-Kubernetes-Deployement/: .gitignore  .helmignore  .npmignore  README.md
Phase-IV-Local-Kubernetes-Deployement/backend/: .eslintrc.json  package-lock.json  package.json
Phase-V-Advanced-Cloud-Deployement/: .gitignore  .helmignore
Phase-V-Advanced-Cloud-Deployement/e2e/: ci_cd_workflow.spec.js  realtime_sync.spec.js  task_crud.spec.js
(+412 files in other folders)
