[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
sqlmodel = "^0.0.33"
psycopg = {extras = ["binary"], version = "^3.1.12"}
python-dotenv = "^1.0.0"
openai = "^1.109.1" # Keep openai for its SDK
pydantic = "^2.5.3"
alembic = "^1.13.0"
python-jose = "^3.3.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
aiosqlite = "^0.19.0"
python-multipart = "^0.0.6"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
ruff = "^0.1.7"
mypy = "^1.7.1"

types-passlib = "^1.7.7.11"
httpx = "^0.25.2"

[tool.mypy]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "jose.*"
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
